--- a/kalkulacka.html
+++ b/kalkulacka.html
@@ -1,8 +1,11 @@
-<html></html>
+<!DOCTYPE html>
+<html lang="cs">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalkulačka</title>
-    <script src="kalkulacka.js"></script>
-    <link href="kalkulacka.css" rel="stylesheet">
+    <script src="/Users/vstudy/Desktop/kalkulacka.js" defer></script>
+    <link href="/Users/vstudy/Desktop/kalkulacka.css" rel="stylesheet">
 </head>
 <body>
     <div id="formular">
